Various changes to component activation and sessions
